# goober-agi

./: .gitignore  LICENSE  README.md  benchmark.py  clean_generate.py  clean_generate_v2.py  config.py  fix_indentation.py  fix_llm_request.py  fix_newlines_final.py  fix_notebooks.py  flawless_generate.py  generate_notebooks.py  kaggle.md  metrics.py  project.md  pyproject.toml  stream_fetcher.py  task1.md  task2.md  task3.md  test_bloomberg.py  test_fetch.py  videos.md
checkpoints/: task1.ipynb  task1.py  task2.ipynb  task3.ipynb
docs/: DEMO_VIDEO.md  DEMO_VIDEO_short.md  improvements.md  kaggle_writeup.md  project.md  task1.md  task2.md  task3.md  video_script.md  videos.md
kaggle/: task2.ipynb  task3.ipynb
src/: metrics.py  stream_fetcher.py
src/tasks/: future_chat_prediction.py  past_frame_generation.py  stream_switch_adaptation.py
